Patchwork/test/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: tls-test
    hosts:
    - test.com
  rules:
  - host: test.com
    http:
      paths:
      - path: /prometheus/(.*)
        backend:
          serviceName: prometheus
          servicePort: 80
      - path: /alertmanager/(.*)
        backend:
          serviceName: alertmanager
          servicePort: 80
